--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script
 AC_INIT()
 AC_CANONICAL_SYSTEM
 
+
 dnl Check system type
 case $target_os in
   cygwin*)
@@ -36,6 +37,10 @@ case $target_os in
     AC_DEFINE(SOLARIS)
 	AC_DEFINE(NO_UNDERSCORES)
     ;;
+  sysv*uv*)
+    AC_DEFINE(SCO_UNIX)
+    AC_DEFINE(NO_UNDERSCORES)
+    ;;
   *)
     AC_MSG_WARN([Operating system type $target_os currently not supported and/or tested])
     ;;
@@ -44,6 +49,7 @@ esac
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CPP
+AC_PROG_LN_S
 AC_PROG_INSTALL
 
 AC_C_INLINE
@@ -56,7 +62,7 @@ if test "$ac_cv_prog_gcc" != yes; then
 #endif
 ], ac_cv_prog_SUNPRO_CC=yes, ac_cv_prog_SUNPRO_CC=no)
   AC_MSG_RESULT($ac_cv_prog_SUNPRO_CC)
-  if test "ac_cv_prog_SUNPRO_CC" != yes; then
+  if test "$ac_cv_prog_SUNPRO_CC" != yes; then
     AC_MSG_CHECKING([whether we are using Compaq's C compiler])
     AC_EGREP_CPP(yes,
 [ #ifdef __DECC
@@ -67,16 +73,33 @@ if test "$ac_cv_prog_gcc" != yes; then
   fi
 fi
 
-dnl Check if we have the necessary java components installed
-AC_ARG_ENABLE(javaglue, [  --enable-javaglue	creates the java glue code [default=yes]],
+AC_ARG_ENABLE(debug, [  --enable-debug	creates debugging code [default=no]],
   [ if test "$enableval" = no; then
-      ac_enable_javaglue=no
+      ac_enable_debug=no
     else
-      ac_enable_javaglue=yes
+      ac_enable_debug=yes
     fi
-  ], [ ac_enable_javaglue=yes ])
+  ], [ ac_enable_debug=no])
 
-if test "$ac_enable_javaglue" = yes ; then
+dnl Check if we need to disable optimizations
+AC_ARG_ENABLE(optimized, [  --enable-optimized    enables the assembler optimizations [default=yes]],
+  [ if test "$enableval" = no; then
+      ac_enable_optimized=no
+    else
+      ac_enable_optimized=yes
+   fi
+  ], [ ac_enable_optimized=yes ])
+
+dnl Check if we have the necessary java components installed
+AC_ARG_WITH(javaglue, [  --with-javaglue	creates the java glue code [default=yes]],
+  [ if test "$withval" = no; then
+      ac_with_javaglue=no
+    else
+      ac_with_javaglue=yes
+    fi
+  ], [ ac_with_javaglue=yes ])
+
+if test "$ac_with_javaglue" = yes ; then
   AC_CHECK_PROG(ac_cv_have_java, java, yes, no)
   AC_CHECK_PROG(ac_cv_have_javac, javac, yes, no)
   if test "$ac_cv_have_java" = yes; then
@@ -104,22 +127,22 @@ EOF
         else
           AC_MSG_WARN([java headers not found, disabling javaglue])
           ac_cv_java_headers=no
-          ac_enable_javaglue=no
+          ac_with_javaglue=no
         fi
       fi
     else
       AC_MSG_WARN([javac not found, disabling javaglue])
       ac_cv_java_headers=no
-      ac_enable_javaglue=no
+      ac_with_javaglue=no
     fi
   else
     AC_MSG_WARN([java not found, disabling javaglue])
     ac_cv_java_headers=no
-    ac_enable_javaglue=no
+    ac_with_javaglue=no
   fi
 fi
 
-if test "$ac_enable_javaglue" = yes ; then
+if test "$ac_with_javaglue" = yes ; then
   AC_DEFINE(JAVAGLUE,1)
   JAVAGLUE="javaglue.o"
   JNIFLAGS="-I$ac_cv_java_include"
@@ -140,34 +163,31 @@ else
   JNIFLAGS=""
 fi
 
-AC_ARG_ENABLE(debug, [  --enable-debug	creates debugging code [default=no]],
-  [ if test "$enableval" = no; then
-      ac_enable_debug=no
-    else
-      ac_enable_debug=yes
-    fi
-  ], [ ac_enable_debug=no])
-
 dnl Product and version
-MAJOR=1
-VERSION=$MAJOR.1.2
+MAJOR=2
+MINOR=0
+VERSION=$MAJOR.$MINOR.0
 PRODUCT=beecrypt
 SHARED_LIBRARY=lib$PRODUCT.so
-SHARED_LIBRARY_NAME=$SHARED_LIBRARY.$MAJOR
+SHARED_LIBRARY_NAME=$SHARED_LIBRARY.$VERSION
 AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(MAJOR, "$MAJOR")
+AC_DEFINE_UNQUOTED(MINOR, "$MINOR")
 AC_DEFINE(JNIFLAGS, $JNIFLAGS)
 AC_SUBST(PRODUCT)
 AC_SUBST(VERSION)
 AC_SUBST(MAJOR)
+AC_SUBST(MINOR)
 AC_SUBST(CC)
 AC_SUBST(CPP)
 AC_SUBST(LD)
 AC_SUBST(CONFASFLAGS)
-AC_SUBST(CONFCFLAGS)
 AC_SUBST(CONFCPPFLAGS)
+AC_SUBST(CONFCFLAGS)
+AC_SUBST(CONFCLIBFLAGS)
 AC_SUBST(CONFLDFLAGS)
+AC_SUBST(CONFLDLIBFLAGS)
 AC_SUBST(JAVAGLUE)
 AC_SUBST(JNIFLAGS)
 
@@ -179,19 +199,15 @@ dnl Checks for library functions.
 AC_FUNC_MEMCMP
 
 dnl Checks for header files.
-AC_HEADER_STDC
+AC_STDC_HEADERS
 
-AC_CHECK_HEADERS(errno.h string.h ctype.h stdlib.h alloca.h)
+AC_CHECK_HEADERS(errno.h string.h ctype.h stdlib.h)
 AC_CHECK_HEADERS(unistd.h fcntl.h limits.h)
 AC_CHECK_HEADERS(time.h)
 AC_CHECK_HEADERS(sys/types.h sys/stat.h sys/time.h)
 AC_CHECK_HEADERS(thread.h pthread.h synch.h semaphore.h)
 AC_CHECK_HEADERS(termio.h termios.h)
 AC_CHECK_HEADERS(sys/audioio.h sys/ioctl.h sys/soundcard.h)
-
-if test "$ac_cv_header_alloca_h" = yes; then
-  AC_DEFINE(HAVE_ALLOCA, 1)
-fi
 
 if test "$ac_cv_header_sys_time_h" = yes; then
   AC_CHECK_FUNC(gettimeofday, [
@@ -206,6 +222,162 @@ if test "$ac_cv_header_thread_h" = yes; then
   AC_HAVE_LIBRARY(thread)
 elif test  "$ac_cv_header_pthread_h" = yes; then
   AC_HAVE_LIBRARY(pthread)
+fi
+
+dnl Checks for compiler flags
+CONFCPPFLAGS=""
+CONFCFLAGS=""
+CONFCLIBFLAGS=""
+CONFLDFLAGS=""
+CONFLDLIBFLAGS=""
+
+if test "$ac_enable_optimized" = yes; then
+  case $target_cpu in
+  alpha*)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_ALPHA"
+    ;;
+  i386)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_I386"
+    ;;
+  i486)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_I486"
+    ;;
+  i586)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_I586"
+    ;;
+  i686)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_I686"
+    ;;
+  ia64)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_IA64"
+    ;;
+  powerpc)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_POWERPC"
+    ;;
+  sparcv8plus*)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_SPARCV8PLUS"
+    ;;
+  sparcv9*)
+    CONFCPPFLAGS="$CONFCPPFLAGS -DOPTIMIZE_SPARCV9"
+    ;;
+  x86)
+  # QNX Neutrino doesn't list the exact cpu type
+    ;;
+  esac
+fi
+
+if test "$ac_cv_prog_gcc" = yes; then
+  CONFCLIBFLAGS="$CONFCFLAGS -shared"
+  CONFLDLIBFLAGS="$CONFLDFLAGS -shared -dy -soname $SHARED_LIBRARY_NAME"
+elif test "$ac_cv_prog_SUNPRO_CC" = yes; then
+  CONFCFLAGS="$CONFCFLAGS -mt"
+  CONFCLIBFLAGS="$CONFCLIBFLAGS -KPIC"
+  CONFLDLIBFLAGS="$CONFLDLIBFLAGS -G -h $SHARED_LIBRARY_NAME"
+else
+  CONFCLIBFLAGS="$CONFCLIBFLAGS -shared"
+  CONFLDLIBFLAGS="$CONFLDLIBFLAGS -shared"
+fi
+
+if test "$ac_enable_debug" = yes; then
+  CONFCFLAGS="$CONFCFLAGS -g"
+  if test "$ac_cv_prog_gcc" = yes; then
+    CONFCFLAGS="$CONFCFLAGS -Wall"
+  fi
+else
+  if test "$ac_cv_prog_gcc" = yes; then
+    CONFCFLAGS="$CONFCFLAGS -O3"
+    if test "$ac_enable_optimized" = yes; then
+      case $target_cpu in
+# This switch makes the mp32 routines slower by about 10%, so it's disabled
+#     alphaev6)
+#       CONFCFLAGS="$CONFCFLAGS -mcpu=ev6"
+#       ;;
+      i486)
+        CONFCFLAGS="$CONFCFLAGS -m486"
+        ;;
+      i586)
+        CONFCFLAGS="$CONFCFLAGS -mpentium"
+        ;;
+      i686)
+        CONFCFLAGS="$CONFCFLAGS -mpentiumpro"
+        ;;
+# This switch makes some code more than 10% slower, for a 2% speedup in mp32 routines, so it's disabled
+#     sparcv8plus*)
+#       CONFCFLAGS="$CONFCFLAGS -mcpu=ultrasparc"
+#       ;;
+#     sparcv9*)
+#       CONFCFLAGS="$CONFCFLAGS -mcpu=ultrasparc"
+#       ;;
+      esac
+    fi
+  elif test "$ac_cv_prog_SUNPRO_CC" = yes; then
+    CONFCFLAGS="$CONFCFLAGS -fast"
+    if test "$ac_enable_optimized" = yes; then
+      case $target_cpu in
+      sparcv8plus)
+        CONFCFLAGS="$CONFCFLAGS -xtarget=generic -xarch=v8plus"
+        ;;
+      sparcv8plusa)
+        CONFCFLAGS="$CONFCFLAGS -xtarget=generic -xarch=v8plusa"
+        ;;
+      sparcv8plusb)
+        CONFCFLAGS="$CONFCFLAGS -xtarget=generic -xarch=v8plusb"
+        ;;
+      sparcv9)
+        CFLAGS="-xarch=v9"
+        CONFCFLAGS="$CONFCFLAGS -xtarget=generic64 -xarch=v9"
+        CONFLDFLAGS="$CONFLDFLAGS -64"
+        ;;
+      sparcv9a)
+        CFLAGS="-xarch=v9"
+        CONFCFLAGS="$CONFCFLAGS -xtarget=generic64 -xarch=v9a"
+        CONFLDFLAGS="$CONFLDFLAGS -64"
+        ;;
+      sparcv9b)
+        CFLAGS="-xarch=v9"
+        CONFCFLAGS="$CONFCFLAGS -xtarget=generic64 -xarch=v9b"
+        CONFLDFLAGS="$CONFLDFLAGS -64"
+        ;;
+      esac
+    fi
+  else
+    CONFCFLAGS="$CONFCFLAGS -O2"
+  fi
+fi
+
+case $target_os in
+  freebsd*)
+	LD=$CC
+    CONFCFLAGS="$CONFCFLAGS -pthread"
+    CONFLDFLAGS="$CONFLDFLAGS -pthread"
+    ;;
+  osf*)
+	LD=$CC
+    CONFLDLIBFLAGS="$CONFLDLIBFLAGS -msym -soname $SHARED_LIBRARY_NAME"
+    ;;
+  solaris*)
+    if test "$ac_cv_prog_SUNPRO_CC" = yes; then
+      LD=/usr/ccs/bin/ld
+    else
+      LD=ld
+    fi
+    ;;
+  *)
+    LD=ld
+    ;;
+esac
+
+dnl Checks for assembler flags
+CONFASFLAGS=""
+if test "$ac_enable_optimized" = yes; then
+  case $target_cpu in
+  sparcv8plus)
+    CONFASFLAGS="-Av8plus"
+    ;;
+  sparcv9)
+    CONFASFLAGS="-Av9 -64"
+    ;;
+  esac
 fi
 
 dnl Checks for word sizes
@@ -225,202 +397,90 @@ AC_CHECK_SIZEOF(double)
 dnl Checks for endianness
 AC_C_BIGENDIAN
 
-dnl Checks for compiler flags
-CONFCFLAGS=""
-CONFCPPFLAGS=""
-CONFLDFLAGS=""
-
-case $target_cpu in
-alpha*)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Dalpha"
-  ;;
-i386)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Di386"
-  ;;
-i486)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Di486"
-  ;;
-i586)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Di586"
-  ;;
-i686)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Di686"
-  ;;
-ia64)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Dia64"
-  ;;
-powerpc)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Dpowerpc"
-  ;;
-sparcv8plus)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Dsparcv8plus"
-  ;;
-sparcv9)
-  CONFCPPFLAGS="$CONFCPPFLAGS -Dsparcv9"
-  ;;
-x86)
-# QNX Neutrino doesn't list the exact cpu type
-  ;;
-esac
-
-if test "$ac_cv_prog_gcc" = yes; then
-  CONFCFLAGS="$CONFCFLAGS -shared"
-  CONFLDFLAGS="$CONFLDFLAGS -shared -dy -soname $SHARED_LIBRARY_NAME"
-elif test "$ac_cv_prog_SUNPRO_CC" = yes; then
-  CONFCFLAGS="$CONFCFLAGS -mt -KPIC"
-  CONFLDFLAGS="$CONFLDFLAGS -G -h $SHARED_LIBRARY_NAME"
-else
-  CONFCFLAGS="$CONFCFLAGS -shared"
-  CONFLDFLAGS="$CONFLDFLAGS -shared"
-fi
-
-if test "$ac_enable_debug" = yes; then
-  CONFCFLAGS="$CONFCFLAGS -g"
-  if test "$ac_cv_prog_gcc" = yes; then
-    CONFCFLAGS="$CONFCFLAGS -Wall"
-  fi
-else
-  if test "$ac_cv_prog_gcc" = yes; then
-    CONFCFLAGS="$CONFCFLAGS -O3"
-    case $target_cpu in
-# This optimization makes the mp32 routines slower by about 10%, so they're disabled
-#   alphaev6)
-#     CONFCFLAGS="$CONFCFLAGS -mcpu=ev6"
-#     ;;
-    i486)
-      CONFCFLAGS="$CONFCFLAGS -m486"
-      ;;
-    i586)
-      CONFCFLAGS="$CONFCFLAGS -mpentium"
-      ;;
-    i686)
-      CONFCFLAGS="$CONFCFLAGS -mpentiumpro"
-      ;;
-    sparcv8plus)
-      CONFCFLAGS="$CONFCFLAGS -mcpu=ultrasparc"
-      ;;
-    sparcv9)
-      CONFCFLAGS="$CONFCFLAGS -mcpu=ultrasparc"
-      ;;
-    esac
-  elif test "$ac_cv_prog_SUNPRO_CC" = yes; then
-    CONFCFLAGS="$CONFCFLAGS -fast"
-    case $target_cpu in
-    sparcv8plus)
-      CONFCFLAGS="$CONFCFLAGS -xchip=ultra -xarch=v8plus"
-      ;;
-    sparcv9)
-      CONFCFLAGS="$CONFCFLAGS -xchip=ultra -xarch=v9"
-      CONFCPPFLAGS="$CONFCPPFLAGS -Dsparcv9"
-      ;;
-    esac
-  else
-    CONFCFLAGS="$CONFCFLAGS -O2"
-  fi
-fi
-
-case $target_os in
-  freebsd*)
-	LD=$CC
-    CONFCFLAGS="$CONFCFLAGS -pthread"
-    CONFLDFLAGS="$CONFLDFLAGS -pthread"
-    ;;
-  osf*)
-	LD=$CC
-    CONFLDFLAGS="$CONFLDFLAGS -msym -soname $SHARED_LIBRARY_NAME"
-    ;;
-  *)
-    LD=ld
-    ;;
-esac
-
-dnl Checks for assembler flags
-CONFASFLAGS=""
-case $target_cpu in
-sparcv8plus)
-  CONFASFLAGS="-Av8plus"
-  ;;
-sparcv9)
-  CONFASFLAGS="-Av9"
-  ;;
-esac
-
 dnl Checks for devices
-AC_MSG_CHECKING(for entropy device)
+AC_CHECKING(for specific entropy devices)
 case $target_os in
-  cygwin*)
-    ;;
-  darwin*)
-    AC_DEFINE(HAVE_DEV_TTY,1)
-    ac_cv_entropy_device="tty"
-    ;;
-  freebsd*)
-    AC_DEFINE(HAVE_DEV_RANDOM,1)
-    AC_DEFINE(HAVE_DEV_URANDOM,1)
-    AC_DEFINE(HAVE_DEV_TTY,1)
-    ac_cv_entropy_device="random,urandom,tty"
+  solaris*)
+    AC_MSG_CHECKING([for /dev/audio])
+    if test -r /dev/audio; then
+      AC_DEFINE(HAVE_DEV_AUDIO,1)
+      AC_MSG_RESULT(yes)
+    else
+      AC_MSG_RESULT(no)
+    fi
     ;;
   linux*)
-    AC_DEFINE(HAVE_DEV_DSP,1)
-    AC_DEFINE(HAVE_DEV_RANDOM,1)
-    AC_DEFINE(HAVE_DEV_URANDOM,1)
-    AC_DEFINE(HAVE_DEV_TTY,1)
-    ac_cv_entropy_device="dsp,random,urandom,tty"
-    ;;
-  osf*)
-    AC_DEFINE(HAVE_DEV_TTY,1)
-    ac_cv_entropy_device="tty"
-    ;;
-  *qnx)
-    AC_DEFINE(HAVE_DEV_TTY,1)
-    ac_cv_entropy_device="tty"
-    ;;
-  solaris*)
-    AC_DEFINE(HAVE_DEV_AUDIO,1)
-    AC_DEFINE(HAVE_DEV_TTY,1)
-    ac_cv_entropy_device="audio,tty"
+    AC_MSG_CHECKING([for /dev/dsp])
+    if test -r /dev/dsp; then
+      AC_DEFINE(HAVE_DEV_DSP,1)
+      AC_MSG_RESULT(yes)
+    else
+      AC_MSG_RESULT(no)
+    fi
     ;;
   *)
-    AC_MSG_ERROR([
-There is no entropy device to initialize the random generator on host $host
-])
-  ;;
+    AC_MSG_WARN(no specific entropy devices present)
+    ;;
 esac
-AC_MSG_RESULT($ac_cv_entropy_device)
+AC_CHECKING(for generic entropy devices)
+AC_MSG_CHECKING([for /dev/random])
+if test -r /dev/random; then
+  AC_DEFINE(HAVE_DEV_RANDOM,1)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+AC_MSG_CHECKING([for /dev/urandom])
+if test -r /dev/urandom; then
+  AC_DEFINE(HAVE_DEV_URANDOM,1)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+AC_MSG_CHECKING([for /dev/tty])
+if test -r /dev/tty; then
+  AC_DEFINE(HAVE_DEV_TTY,1)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
 
 dnl Generate the assembler optimizations
-BLOWFISHOPTDEP=""
-BLOWFISHOPTRULE=""
-FIPS180OPTDEP=""
-FIPS180OPTRULE=""
-MP32OPTDEP=""
-MP32OPTRULE=""
-case $target_cpu in
-  i386)
-    MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.i386.S"
-    MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.i386.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
-    ;;
-  i[[56]]86)
-    BLOWFISHOPTDEP="blowfishopt.o: gnu/blowfishopt.gas.i586.S"
-    BLOWFISHOPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/blowfishopt.gas.i586.S | \$(AS) \$(ASFLAGS) -o blowfishopt.o"
-    FIPS180OPTDEP="fips180opt.o: gnu/fips180opt.gas.i586.S"
-    FIPS180OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/fips180opt.gas.i586.S | \$(AS) \$(ASFLAGS) -o fips180opt.o"
-    MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.i386.S"
-    MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.i386.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
-    ;;
-  ia64)
-    MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.ia64.S"
-    MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.ia64.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
-    ;;
-  powerpc)
-    MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.powerpc.S"
-    MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.powerpc.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
-    ;;
-  sparcv8plus | sparcv9)
-    MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.sparcv9.S"
-    MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.sparcv9.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
-    ;;
-esac
+BLOWFISHOPTDEP="blowfishopt.o: blowfishopt.c"
+BLOWFISHOPTRULE="	\$(COMPILE.c) \$(CLIBFLAGS)"
+FIPS180OPTDEP="fips180opt.o: fips180opt.c"
+FIPS180OPTRULE="	\$(COMPILE.c) \$(CLIBFLAGS)"
+MP32OPTDEP="mp32opt.o: mp32opt.c"
+MP32OPTRULE="	\$(COMPILE.c) \$(CLIBFLAGS)"
+if test "$ac_enable_optimized" = yes; then
+  case $target_cpu in
+    i386)
+      MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.i386.S"
+      MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.i386.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
+      ;;
+    i[[56]]86)
+      BLOWFISHOPTDEP="blowfishopt.o: gnu/blowfishopt.gas.i586.S"
+      BLOWFISHOPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/blowfishopt.gas.i586.S | \$(AS) \$(ASFLAGS) -o blowfishopt.o"
+      FIPS180OPTDEP="fips180opt.o: gnu/fips180opt.gas.i586.S"
+      FIPS180OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/fips180opt.gas.i586.S | \$(AS) \$(ASFLAGS) -o fips180opt.o"
+      MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.i386.S"
+      MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.i386.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
+      ;;
+    ia64)
+      MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.ia64.S"
+      MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.ia64.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
+      ;;
+    powerpc)
+      MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.powerpc.S"
+      MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.powerpc.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
+      ;;
+    sparcv8plus) 
+      MP32OPTDEP="mp32opt.o: gnu/mp32opt.gas.sparcv9.S"
+      MP32OPTRULE="	\$(CPP) \$(CPPFLAGS) gnu/mp32opt.gas.sparcv9.S | \$(AS) \$(ASFLAGS) -o mp32opt.o"
+      ;;
+  esac
+fi
+
 AC_SUBST(BLOWFISHOPTDEP)
 AC_SUBST(BLOWFISHOPTRULE)
 AC_SUBST(FIPS180OPTDEP)
